# demo_proyecto

./: README.md  main.py  pyproject.toml  sueldo_neto.py
